<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (C) 2019 - 2020 Rabobank Nederland

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <url>https://github.com/argosnotary/argos4j-cli</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Gerard Borst</name>
            <email>gerard.borst@rabobank.nl</email>
            <organization>Rabobank</organization>
            <organizationUrl>https://www.rabobank.com</organizationUrl>
        </developer>
        <developer>
            <name>Bart Kors</name>
            <email>bart.kors@rabobank.nl</email>
            <organization>Rabobank</organization>
            <organizationUrl>https://www.rabobank.com</organizationUrl>
        </developer>
        <developer>
            <name>Michel Durieux</name>
            <email>michel.durieux@rabobank.nl</email>
            <organization>Rabobank</organization>
            <organizationUrl>https://www.rabobank.com</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/argosnotary/argos.git</connection>
        <developerConnection>scm:git:https://github.com/argosnotary/argos.git</developerConnection>
        <url>https://github.com/argosnotary/argos4j-cli/tree/master</url>
    </scm>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <groupId>com.rabobank.argos</groupId>
    <artifactId>argos4j-cli</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <argos4j.version>0.0.1-RC8</argos4j.version>
        <picocli.version>4.3.2</picocli.version>
        <lombok.version>1.18.12</lombok.version>
        <config.version>1.3.4</config.version>
        <slf4j.version>1.7.6</slf4j.version>
        <commons-codec.version>1.11</commons-codec.version>
        <commons-io.version>2.6</commons-io.version>
        <junit-jupiter.version>5.5.2</junit-jupiter.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.rabobank.argos</groupId>
            <artifactId>argos4j</artifactId>
            <version>${argos4j.version}</version>
        </dependency>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>${picocli.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe</groupId>
            <artifactId>config</artifactId>
            <version>${config.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${commons-codec.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock</artifactId>
            <version>2.25.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <!-- annotationProcessorPaths requires maven-compiler-plugin version 3.5 or higher -->
                <version>3.8.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>info.picocli</groupId>
                            <artifactId>picocli-codegen</artifactId>
                            <version>${picocli.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
                    </compilerArgs>
                </configuration>

            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.10</version>
                <executions>
                    <execution>
                        <id>appcreation</id>
                        <phase>package</phase>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                        <configuration>
                            <programs>
                                <program>
                                    <mainClass>com.rabobank.argos4j.cli.PostLinkCommand</mainClass>
                                    <id>postLink</id>
                                </program>
                            </programs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <quiet>false</quiet>
                    <failIfMissing>true</failIfMissing>
                    <strictCheck>true</strictCheck>
                    <aggregate>false</aggregate>
                    <header>https://raw.github.com/argosnotary/argos/master/docs/header.txt</header>
                    <excludes>
                        <exclude>target/**</exclude>
                        <exclude>drone.yml</exclude>
                        <exclude>workspace/**</exclude>
                        <exclude>**/*.properties</exclude>
                    </excludes>
                    <useDefaultExcludes>true</useDefaultExcludes>
                    <properties>
                        <lic.year>2020</lic.year>
                    </properties>
                    <encoding>UTF-8</encoding>
                    <mapping>
                        <java>SLASHSTAR_STYLE</java>
                        <Dockerfile>SCRIPT_STYLE</Dockerfile>
                        <ArgosBuildWithArgosWrapper>SCRIPT_STYLE</ArgosBuildWithArgosWrapper>
                    </mapping>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>


        </plugins>
    </build>
    <profiles>
        <profile>
            <id>sonar</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.4</version>
                        <executions>
                            <execution>
                                <id>reporting</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>default-report</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonarsource.scanner.maven</groupId>
                        <artifactId>sonar-maven-plugin</artifactId>
                        <version>3.6.1.1688</version>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>